update README, - fix overlapping styles w/ General torrent info - refresh data less frequently

--- a/src/app/torrent-info-dialog/torrent-info-dialog.component.css
+++ b/src/app/torrent-info-dialog/torrent-info-dialog.component.css
@@ -18,3 +18,8 @@ app-file-system-tree-explorer {
 mat-chip-list {
     align-self: flex-end;
 }
+
+.leftPanel, .rightPanel {
+  flex-grow: 1;
+  padding: 5px;
+}
